--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
     <link
       rel="stylesheet"
-      href="http://netdna.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.css"
+      href="https://netdna.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.css"
     />
     <link rel="stylesheet" href="css/pureextension.css" />
     <!--[if lte IE 8]>
@@ -47,19 +47,6 @@
     <script src="js/core.js"></script>
   </head>
   <body>
-    <!--[if lte IE 8]>
-      <link
-        rel="stylesheet"
-        href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-old-ie-min.css"
-      />
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-    <link
-      rel="stylesheet"
-      href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css"
-    />
-    <!--<![endif]-->
-
     <div class="content-wrapper" id="content-wrapper" style="top: auto">
       <div class="pure-g">
         <div class="pure-u-1">
